--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -7,7 +7,7 @@
           <img src="{{ site.logo | relative_url }}" alt="Gap Tap logo">
         </a>
         {% endif %}
-        <a class="site-title" href="{{ '/' | relative_url }}">
+        <a class="site-title visually-hidden" href="{{ '/' | relative_url }}">
           {{ site.masthead_title | default: site.title }}
           {% if site.subtitle %}<span class="site-subtitle">{{ site.subtitle }}</span>{% endif %}
         </a>
