Revert "Add logo to hero section with accessibility enhancement (#2)"
This reverts commit 1dd9eb3b579a6a8d069a2ca7123700f2bb47547d.

--- a/_layouts/custom-home.html
+++ b/_layouts/custom-home.html
@@ -5,10 +5,7 @@ layout: default
 
 <!-- Hero Text -->
 <section class="custom-hero wrapper">
-    <h1>
-        <img src="/assets/images/gap-tap-logo.png" alt="Gap Tap Logo" style="height: 2em; vertical-align: middle;" />
-        Welcome to <span class="visually-hidden">Gap Tap</span> Support
-    </h1>
+    <h1>Welcome to Gap Tap Support</h1>
 
 </section>
 
